--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.10",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
+    "lucide-react": "^0.554.0",
+    "motion": "^12.23.24",
     "next": "16.0.3",
+    "prop-types": "^15.8.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-pageflip": "^2.0.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
